# SimpleFTL-Sim

./: CMakeLists.txt  README.md
include/: AddressMapper.hpp  BlockManager.hpp  Common.hpp  FTL_Controller.hpp  Logger.hpp  NandDevice.hpp  Trace_Player.hpp
src/: AddressMapper.cpp  BlockManager.cpp  FTL_Controller.cpp  NandDevice.cpp  Trace_Player.cpp  main.cpp
traces/: basic.trace  test.trace  traceGen.py
